# TheseusPlot_py

./: LICENSE  README.Rmd  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: prepare_pypi_readme.py
src/theseusplot/: __init__.py  _config.py  _ship.py
tests/: test_continuous_binning.py  test_contribution_algorithm.py  test_fixtures.py  test_plot.py  test_public_api.py  test_table_behavior.py
tests/fixtures/: table_factor_order.json  table_missing_asymmetric_categories.json  table_top_n_aggregation.json
