[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "theseusplot"
version = "0.1.1"
description = "Python port of TheseusPlot for decomposing differences in rate metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TheseusPlot.py contributors" },
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
examples = [
  "nycflights13>=0.0.3",
]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/theseusplot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "pandas.*",
]
ignore_missing_imports = true
